Closed Bug 465011 Opened 17 years ago Closed 17 years ago

group by sort in saved search (virtual folder) confused on imap and crash on expand/collapse group [@ memmove - nsTArray_base::ShiftData]

Categories

(Thunderbird :: Mail Window Front End, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b1

People

(Reporter: ovidiu.grigorescu, Assigned: Bienvenu)

References

Details

(Keywords: crash, Whiteboard: [patch pushed, probably fixed?])

Crash Data

Attachments

(4 files)

Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081112 Shredder/3.0b1pre ID:20081112031406 1pop, 1gmail pop, 1 another gmail imap Crash ID: bp-00323908-d375-4cec-acf1-cf5320081114 Crash ID: bp-b776b744-ba7f-4c42-b1fb-807b20081114 Crash ID: bp-ceb55751-93aa-47d5-9168-bdd020081114 Crash ID: bp-b1e86751-14f8-4f7b-aa60-1e2a20081114 can reproduce that pretty consistent. with click on group head or * If grouping by sort and account, msg from imap show confused and appear without an account in column and some under another acc, not grouped actually, not collapsing, some under an acc group head with only (32) and no name corresponding to sent in gmail imap structure. that one is the crasher .. when +/- The problem is that account column is empty anyway for that gmail imap, regardless of groups or such. I managed to also collapse expand that 32 one without crash but it disappeared along with the above account, only one account left out of 3 I suspect it takes some switchin sorters first, and than expand collapse group crashes immediately. It may be keen to location or account sorters, as I think I was there in all 3-4 crashes. I always !! have it on a specific group that does not show an account name but only a (32) instead, as above.. [this is not the only thing related threads or groups to ssearch]
This time I got it on a normal folder grouped and not a saved search All inclusive ;) even the crash btw, Gecko/20081114 Shredder/3.0b1pre ID:20081114033300 [14 ok] seamed a bit better on thread and group. But I got my crashes eventually ..
again not necessarily on ssearch but normal folder Quick search and if wait for F to display results type W will not work like a qiock FW type, same for fw quick and d after tree regen .. Anyway, I think is related to these, and of course a regression (BTW, this seams slower in regenerating a small tree in q search, not to say about 1-2 second for each msg header, I bug separated ..) Also, same for last comment, grouping does these on pop too, so not only imap. Just that imap is weird by default not having some column.
after several switch thread unthreaded group unthread etc end up with threaded: tree looks like group (pic) and unthreaded looks same without twisty on group heads .. Also some more crashes (not on this view, previous ones..) Crash ID: bp-d574bb19-2405-4aa4-ad7c-a6d820081114 Crash ID: bp-f6071101-8bb3-43b3-baf9-878420081114 Crash ID: bp-dcf8086b-f93d-4cd3-8e69-ee0d20081114
Signature msvcr80.dll@0x173e8 UUID b1e86751-14f8-4f7b-aa60-1e2a20081114 Version 3.0b1pre Build ID 20081112031406 OS Version 6.0.6001 Service Pack 1 CPU x86 CPU Info GenuineIntel family 6 model 15 stepping 2 Crash Reason EXCEPTION_ACCESS_VIOLATION Crash Address 0x713e000 Comments Crashing Thread Frame Module Signature [Expand] Source 0 msvcr80.dll msvcr80.dll@0x173e8 1 msvcr80.dll msvcr80.dll@0x17475 2 msvcr80.dll msvcr80.dll@0x174d7 3 xpcom_core.dll nsTArray_base::ShiftData nsTArray.cpp:173 4 thunderbird.exe thunderbird.exe@0x59f3d5 so, we don't have symbols for thunderbird.exe, no idea why. (we also don't have symbols for your msvcr80, but i can deal w/ that).
Severity: normal → critical
Keywords: crash
Summary: [crash] group by sort in saved search (virtual folder) confused on imap and crash on expand/collapse group → group by sort in saved search (virtual folder) confused on imap and crash on expand/collapse group [@ memmove - nsTArray_base::ShiftData]
I believe I fixed this as part of bug 464802, which landed on 11/14. Marking as a dup - please re-open if you can recreate with a build of 11/15 or later.
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → DUPLICATE
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081118 Shredder/3.0b1pre ID:20081118031447 retesting, gmail pop, another gmail imap I. for normal folders, not searches: [pop, imap] !-group by sort messes up tree and thread afterwards *steps: 1.in imap go to a folder ("all" in gmail..) 2.group by sort (after date), groups collapsed 3.expand one group, collapse another 4.view/sort by/unthreaded -keeps the rows with group heads (no twisty or action) 5.change various sorters -keeps showing respective heads (tags, from etc) same as above 6.sort by threaded -actually shows groups, though menu and sorters show thread -twisty not effective for the bottommost 7.repeat collapse/expand on topmost or another -eats msg 1 by 1, collapsing 1, never expanding it, collapse next, etc 8. if repreat 7 till no msg remain and it 'eats' itself, clean thread pane! [NOT crashing] --var: after 8 or at any time, if group by sort, it gets ok, if switch folders ok --var: after 6, if repeat threaded/unthreaded, the groups move up and down for 1 msg, so that 1 msg is alternatively in two weeks and in old mail (this may be about that bug with aging msg and midnight or such, don't remember wich) repro:always note that switches: TH -> GR ok TH -> UnTH ok GR -> TH ok GR -> UnTH is not ok!, this switch leaves useless group heads in tree and degenerates I prefer imap, as some msg were copied from imap to pop, so .. I'd say that unthreaded never cleans after grouping. Anyway, the view is unreliable. II. for searches: 0.create a saved search cross acc[pop, imap], placed under local folders group by sort- 1. go to folder(search), switch to group by sort (by date) 2. all collapsed, expand some of them (sometimes just expand bs and eat msg, sometimes, ok) 3. switch to unthreaded -shows empty rows here and there, (they have location cell) 4. switch back to group -only some groups shown (last week in this case) -only couple of msg are shown, apparently from respective group -no twisty, though dbclick and *\ work 5. switch repeadedly th/unth -these last msg are shown, nothing new -- escape this view living the folder .. 6. switch sorters, from etc -it switches to threaded mode instead of groups Repro: always I tried here the most common steps I can consistently repro. Otherwise, there are variations of these. Eventually I hunted crashes, wich happend only once and I think have not submitted
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081119 Shredder/3.0b1pre ID:20081119032441 Crash ID: bp-5df6378f-3849-4406-b53c-896220081120 Crash ID: bp-f12cb1e8-62a5-4a95-8d78-113a20081120 -gmail pop and imap, crashes on 2 different profiles [I'll try havin yet another one to see ..] -note that I hardly crashed it on 11-18 ver, but managed to do it on 11-19 like this, though just speculating .. 1. have a cross acc, pop/imap/local ssearch with simple criteria to get lot of msg 2. threaded, collapse some threads 3. unthreaded, should mess a bit hiding some msg 4. group by sort 5. unthreaded, again group by sort -groups look messy, twisty not really workin and not showin some elements 6. try to collapse/expand one group that does not react to click, by dbclick or repeated twisty clicks 7. tadaa [crash] *this is hard to repro in perfect steps as the degenerated groups degenerate sometimes easier or slower *as in prev comment, getting from groups to unthreaded messes up view *I played a lot with these on threads and groups on 11-18 and found mostly view mess, but not much crash. (Enough though to say a bug). on 11-19 seams to get there quick I did no quick search here, (that in comment 2 is besides the point) I'll test some more, trying to start fresh and such
Status: RESOLVED → UNCONFIRMED
Resolution: DUPLICATE → ---
confirming - I'll try to reproduce it here.
Status: UNCONFIRMED → NEW
Ever confirmed: true
going from threaded to unthreaded in large views definitely causes some issues. I'll investigate.
Assignee: nobody → bienvenu
Flags: blocking-thunderbird3+
Target Milestone: --- → Thunderbird 3.0b1
this fixes the issue I was able to reproduce, which was: define a saved search over several folders, with critera age in days < 20 days turn on threading leave folder, return unthread You should get hits in several folders for this to matter, but we weren't clearing the m_folders array, which meant the folders got out of sync with the view indices. I'd love to land this relatively soon so we can see how many issues it fixes...
Attachment #349325 - Flags: superreview?(bugzilla)
Attachment #349325 - Flags: review?(bugzilla)
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081120 Shredder/3.0b1pre ID:20081120031926 [same saved searches etc ..] not able to crash it anymore the messy thread pane is still there, thread/unthread, gr by sort/unthread hiding msg or displaying blanc rows .. also tried in XP, same
Comment on attachment 349325 [details] [diff] [review] [checked in] fix issues switching views in saved searches Looks good. I'll land this for today's TB nightlies.
Attachment #349325 - Flags: superreview?(bugzilla)
Attachment #349325 - Flags: superreview+
Attachment #349325 - Flags: review?(bugzilla)
Attachment #349325 - Flags: review+
Comment on attachment 349325 [details] [diff] [review] [checked in] fix issues switching views in saved searches Checked in http://hg.mozilla.org/comm-central/rev/fc5d0912af54 I'll leave it up to David to decide if this is fixed or not.
Attachment #349325 - Attachment description: fix issues switching views in saved searches → [checked in] fix issues switching views in saved searches
Whiteboard: [patch pushed, probably fixed?]
thx for landing this, Mark. ovidiu, were you trying with my patch, or without it?
I'm going to mark this fixed, because it definitely fixes a bug (probably lots of bugs, because every time we switch views in a cross-folder saved search, this bug might come into play). We should open new bugs for things that are still reproducible.
Status: NEW → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081121 Shredder/3.0b1pre ID:20081121031917 :)WFM Threads and Group by sort ok now! tried with 30-69 -and more msg .. Not being able to repro anymore. It seams to show all and correctly. the only related, almost same behavior anyway is the g by sort for tags -did not expand the untagged, nor did it show any label on it, -on switch to back to unthreaded it shows only the msg with tags (untagged not shown eventually disappear) only once, dunno how to get there ..
> :)WFM > > Threads and Group by sort ok now! tried with 30-69 -and more msg .. Not being > able to repro anymore. It seams to show all and correctly. Yay, thank you very much for your steps to reproduce, and for verifying the fix! > > > the only related, almost same behavior anyway is the g by sort for tags > -did not expand the untagged, nor did it show any label on it, > -on switch to back to unthreaded it shows only the msg with tags (untagged not > shown eventually disappear) I'll try this...
cannot repro but scarcely, cannot give steps. I'll try more to push it on these and others (last 11-21 has other things, like switch sorters in g by s changes to threads always .. and other small stuff ..) David: Should new bugs in this area be dependent on this or other? or just cc you?
New bugs, just cc me, thx!
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081124 Shredder/3.0b1pre ID:20081124033907 [ kmon!, not again .. :( ] *ssearch, *threaded -> group by sort, -some untitled groups not expandable (key moment) *imediately or [unthreaded, GbyS again] *try to expand that untitled, no chance *play with the other groups (+/-) and eventually .. uh Crash ID: bp-9f6eddb3-a881-4465-b974-460642081124 Crash ID: bp-e1d21610-a86d-4c64-b183-9a50b2081124 *after restart gor the view with ome groups *groups messy, some msg out of any group *try to collapse today or alike .. uh Crash ID: bp-1f69f173-e024-434f-a433-ffb0c2081124 *restart, get unthreaded, threaded, unthreaded *GbyS, still odd grouping .. *change sort order from sorters area (date [v][^] ..) *again .. Crash ID: bp-c107a600-b7c4-4473-8082-6c0c02081124 enough Seams the not always precise steps, but always: -from Threaded -> GbyS, gets some untitled, unexpadable groups or some msg not in groups, mess starts here .. -somehere around expanding groups that are not sane I got the crashes, sometimes after playing around +/-, sometimes immediately, sometimes seams any change (sorters) is crash .. [that is where previously got the most crashes too ..] I'll test on xp to see if same.
same ver, but XP Crash ID: bp-59fb97a2-69ba-4544-9bc3-a67842081124 *ssearch *threaded *GbyS -odd empty lines or unexpandable groups *try to +/- that or another ->crash also crashed on vista when in same odd view, by say unthreaded Seams once I get that odd GbyS degenerates whatever the changes ...
comment 20 and comment 21 have stacks which match the ones i've triaged in bug 467840 comment 1, so they don't belong to this bug.
ovidiu is this totally gone for you?
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b3pre) Gecko/20090223 Thunderbird/3.0b2 still some there Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b5pre) Gecko/20090511 Shredder/3.0b3pre seams gone for good there are lots of visible changes anyway since these bugs. for one, switch the sorter leads to losing grouped by sort in favor of threaded (previously lead to a mess), not very convenient if not to be considered a bug as UI/procedure, but not messing or crashing.
Crash Signature: [@ memmove - nsTArray_base::ShiftData]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: