Bug 465011 - "group by sort in saved search (virtual folder) confused on imap and crash on expand/collapse group [@ memmove - nsTArray_base::ShiftData]" [r+sr=Standard8]